# Dockerized_TodoAPIs

./: Dockerfile.dev  pyproject.toml
todoapp/: main.py
